added the first vlog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first ever git hub</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
-<body>
+<body><div>
+    <h3>
+        my first website
+    </h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, excepturi. Animi minus repudiandae error incidunt sit dolores alias, doloremque asperiores ea. Rerum labore iste eius incidunt accusantium aut, omnis voluptate!</p>
+
+</div>
     
 </body>
 </html>
