added sara photo

--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
     <title>My first ever git hub</title>
     <link rel="stylesheet" href="styles/blog.css">
 </head>
-<body><div>
+<body>
+    <div>
     <h3>
-        my first website
+        my first blog
     </h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, excepturi. Animi minus repudiandae error incidunt sit dolores alias, doloremque asperiores ea. Rerum labore iste eius incidunt accusantium aut, omnis voluptate!</p>
 
+</div>
+    <div>
+    <h3>
+        my second blog
+    </h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, excepturi. Animi minus repudiandae error incidunt sit dolores alias, doloremque asperiores ea. Rerum labore iste eius incidunt accusantium aut, omnis voluptate!</p>
+
+</div>
+    <div>
+    <h3>
+        my third blog
+    </h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, excepturi. Animi minus repudiandae error incidunt sit dolores alias, doloremque asperiores ea. Rerum labore iste eius incidunt accusantium aut, omnis voluptate!</p>
+
+</div>
+<div>
+    <h2>sara photo</h2>
+    <img src="sara photo.jpg" alt="">
 </div>
     
 </body>
